[package]
name = "quokka_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = { version = "50.0.0", features = ["prettyprint"] }
arrow-array = { version = "50.0.0", default-features = false, features = [
  "chrono-tz",
] }
arrow-buffer = { version = "50.0.0", default-features = false }
arrow-flight = { version = "50.0.0", features = ["flight-sql-experimental"] }
arrow-ipc = { version = "50.0.0", default-features = false, features = ["lz4"] }
arrow-ord = { version = "50.0.0", default-features = false }
arrow-schema = { version = "50.0.0", default-features = false }
arrow-string = { version = "50.0.0", default-features = false }
async-trait = "0.1"
roaring = "0.10.3"
anyhow = "1.0.79"
datafusion = "35.0.0"
datafusion-common = "35.0.0"
datafusion-execution = "35.0.0"
datafusion-expr = "35.0.0"
datafusion-physical-plan = "35.0.0"
futures = "0.3"
log = "^0.4"
parking_lot = "0.12"
tokio = { version = "1.0", features = ["full"] }
